Make eap extension lower case

--- a/config/eap-mapping.json
+++ b/config/eap-mapping.json
@@ -2,7 +2,7 @@
 {
   "name": "besluitvorming-ap",
   "type": "ap",
-  "eap": "OSLO-Besluitvorming-2020.EAP",
+  "eap": "OSLO-Besluitvorming-2020.eap",
   "diagram": "OSLO-Besluitvorming",
   "template": "besluitvorming-ap.j2",
   "title": "OSLO-Besluitvorming (Applicatieprofiel)",
@@ -19,7 +19,7 @@
   "name": "besluitvorming-voc",
   "type": "voc",
   "prefix": "besluitvorming",
-  "eap": "OSLO-Besluitvorming-2020.EAP",
+  "eap": "OSLO-Besluitvorming-2020.eap",
   "diagram": "Besluitvorming_AP",
   "template": "besluitvorming-voc.j2",
   "title": "OSLO-Besluitvorming",
